Added alt descriptions for all images in grid

--- a/index.html
+++ b/index.html
@@ -52,30 +52,38 @@
           <img src="images/grid-1.png" alt="Abstract statue" />
         </div>
         <div class="content-grid-item__2">
-          <img src="images/grid-2.png" alt="Abstract statue" />
+          <img src="images/grid-2.png" alt="Abstract cactus, man, and blue balloon " />
         </div>
         <div class="content-grid-item__3">
-          <img src="images/grid-3.png" alt="Abstract statue" />
+          <img src="images/grid-3.png" alt="Abstract mountain sunset" />
         </div>
         <div class="content-grid-item__4">
-          <img src="images/grid-4.png" alt="Abstract statue" />
+          <img src="images/grid-4.png" alt="Man in field at sunset" />
         </div>
         <div class="content-grid-item__5">
-          <img src="images/grid-5.png" alt="Abstract statue" />
+          <img src="images/grid-5.png" alt="Abstract man thinking" />
         </div>
         <div class="content-grid-item__6">
-          <img src="images/grid-6.png" alt="Abstract statue" />
+          <img src="images/grid-6.png" alt="Statue of liberty wearing flower toga" />
         </div>
         <div class="content-grid-item__7">
-          <img src="images/grid-7.png" alt="Abstract statue" />
+          <img src="images/grid-7.png" alt="Abstract woman crossing street pursued by a large orange ball" />
         </div>
         <div class="content-grid-item__8">
-          <img src="images/grid-8.png" alt="Abstract statue" />
+          <img src="images/grid-8.png" alt="Woman facing sun on desert sands" />
         </div>
-        <div class="content-grid-item__9"><img src="images/grid-9.png" alt="Abstract statue"></div>
-        <div class="content-grid-item__10"><img src="images/grid-10.png" alt="Abstract statue"></div>
-        <div class="content-grid-item__11"><img src="images/grid-11.png" alt="Abstract statue"></div>
-        <div class="content-grid-item__12"><img src="images/grid-12.png" alt="Abstract statue"></div>
+        <div class="content-grid-item__9">
+          <img src="images/grid-9.png" alt="Abstract man with face split open to reveal flowers" />
+        </div>
+        <div class="content-grid-item__10">
+          <img src="images/grid-10.png" alt="Man with transparent texture covering his face like paint" />
+        </div>
+        <div class="content-grid-item__11">
+          <img src="images/grid-11.png" alt="Silhouette swinging from piano keys" />
+        </div>
+        <div class="content-grid-item__12">
+          <img src="images/grid-12.png" alt="Abstract inverted green landscape" />
+        </div>
       </section>
     </main>
     <footer>
