Finished home page content and styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
           <img src="images/grid-1.png" alt="Abstract statue" />
         </div>
         <div class="content-grid-item__2">
-          <img src="images/grid-2.png" alt="Abstract cactus, man, and blue balloon " />
+          <img
+            src="images/grid-2.png"
+            alt="Abstract cactus, man, and blue balloon "
+          />
         </div>
         <div class="content-grid-item__3">
           <img src="images/grid-3.png" alt="Abstract mountain sunset" />
@@ -64,26 +67,123 @@
           <img src="images/grid-5.png" alt="Abstract man thinking" />
         </div>
         <div class="content-grid-item__6">
-          <img src="images/grid-6.png" alt="Statue of liberty wearing flower toga" />
+          <img
+            src="images/grid-6.png"
+            alt="Statue of liberty wearing flower toga"
+          />
         </div>
         <div class="content-grid-item__7">
-          <img src="images/grid-7.png" alt="Abstract woman crossing street pursued by a large orange ball" />
+          <img
+            src="images/grid-7.png"
+            alt="Abstract woman crossing street pursued by a large orange ball"
+          />
         </div>
         <div class="content-grid-item__8">
           <img src="images/grid-8.png" alt="Woman facing sun on desert sands" />
         </div>
         <div class="content-grid-item__9">
-          <img src="images/grid-9.png" alt="Abstract man with face split open to reveal flowers" />
+          <img
+            src="images/grid-9.png"
+            alt="Abstract man with face split open to reveal flowers"
+          />
         </div>
         <div class="content-grid-item__10">
-          <img src="images/grid-10.png" alt="Man with transparent texture covering his face like paint" />
+          <img
+            src="images/grid-10.png"
+            alt="Man with transparent texture covering his face like paint"
+          />
         </div>
         <div class="content-grid-item__11">
-          <img src="images/grid-11.png" alt="Silhouette swinging from piano keys" />
+          <img
+            src="images/grid-11.png"
+            alt="Silhouette swinging from piano keys"
+          />
         </div>
         <div class="content-grid-item__12">
-          <img src="images/grid-12.png" alt="Abstract inverted green landscape" />
+          <img
+            src="images/grid-12.png"
+            alt="Abstract inverted green landscape"
+          />
         </div>
+      </section>
+      <section class="group">
+        <div class="group__main">
+          <h2>
+            We love work hard and explore new things that’s why we cover lot of
+            things. Check our service list and view details
+          </h2>
+        </div>
+        <div class="group__sub">
+          <ul>
+            <li>Multimedia</li>
+            <li>Interactive Design</li>
+            <li>Branding</li>
+          </ul>
+          <ul>
+            <li>Creative design</li>
+            <li>Packaging</li>
+            <li>Coding</li>
+          </ul>
+        </div>
+      </section>
+      <section class="awards">
+        <hr />
+        <div class="awards__box">
+          <h2>Awwwards</h2>
+          <div class="awards__desc">
+            <div class="awards__container">
+              <h3>Site of the day</h3>
+              <div class="awards__desc__info">
+                <p>Genesis UI Kit</p>
+                <p class="awwards__desc-translucent">
+                  Application that helps to find nearest sport centres in your
+                  area
+                </p>
+              </div>
+              <p>2018</p>
+            </div>
+            <div class="awards__container">
+              <h3>Best navigation</h3>
+              <div class="awards__desc__info">
+                <p>Genesis Template</p>
+                <p class="awards__desc-translucent">
+                  Application that helps to find nearest sport centres in your
+                  area
+                </p>
+              </div>
+              <p>2018</p>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="awards__box">
+          <h2>CSSDesignAwards</h2>
+          <div class="awards__desc">
+            <div class="awards__container">
+              <h3>Site of the day</h3>
+              <div class="awards__desc__info">
+                <p>Genesis UI Kit</p>
+                <p class="awwards__desc-translucent">
+                  Application that helps to find nearest sport centres in your
+                  area
+                </p>
+              </div>
+              <p>2017</p>
+            </div>
+            <div class="awards__container">
+              <h3>Best navigation</h3>
+              <div class="awards__desc__info">
+                <p>Genesis Template</p>
+                <p class="awards__desc-translucent">
+                  Application that helps to find nearest sport centres in your
+                  area
+                </p>
+              </div>
+              <p>2016</p>
+            </div>
+          </div>
+        </div>
+        <hr />
       </section>
     </main>
     <footer>
