--- a/pages/projects.html
+++ b/pages/projects.html
@@ -32,6 +32,80 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="title">
+        <div class="title__desc">
+          <h1>A fresh new title can make all the difference!</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+            <br /><br />
+            You need to be sure there isn't anything embarrassing hidden in the
+            middle of text. All the Lorem Ipsum generators on the Internet tend
+            to repeat predefined chunks as necessary, making this the first true
+            generator on the Internet. It uses a dictionary of over 200 Latin
+            words, combined with a handful of model sentence structures.
+          </p>
+        </div>
+        <div class="title__info">
+          <ul>
+            <li>
+              <h2>Project</h2>
+              <p>Genesis Portfolio</p>
+            </li>
+            <hr />
+            <li>
+              <h2>Design</h2>
+              <p>Bakhtiyar Sattarov</p>
+            </li>
+            <hr />
+            <li>
+              <h2>Client</h2>
+              <p>Crarftwork</p>
+            </li>
+            <hr />
+            <li>
+              <h2>Deliverable</h2>
+              <p>Website Design</p>
+            </li>
+            <hr />
+            <li>
+              <h2>Year</h2>
+              <p>2018</p>
+            </li>
+            <hr />
+            <li>
+              <h2>Field</h2>
+              <p>Branding, Personal</p>
+            </li>
+            <hr />
+          </ul>
+        </div>
+      </section>
+      <section class="content">
+        <img
+          class="content__hero__img"
+          src="../images/projects-girl.png"
+          alt="Abstract woman crossing street pursued by a large orange ball"
+        />
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+          If you are going to use a passage of Lorem Ipsum, You need to be sure
+          there isn't anything embarrassing hidden in the middle of text. You
+          need to be sure there isn't anything embarrassing hidden in the middle
+          of text.
+        </p>
+        <div class="content__img__gallery">
+          <img src="../images/projects-greenery.png" alt="Abstract inverted green landscape" />
+          <img src="../images/projects-flowers.png" alt="Abstract flowers in vase" />
+          <img src="../images/projects-dark.png" alt="Moody dark apartment entrance" />
+        </div>
+      </section>
+    </main>
     <footer>
       <nav>
         <a href="../index.html">
