Finished contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,6 +32,48 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="contact">
+        <div class="contact__info">
+          <h1>Full set of great features to make your product fresh</h1>
+          <p>
+            Our favorite brands are our friends! We help them to achieve their
+            goals, they help us to stay sharp.
+          </p>
+        </div>
+        <div class="contact__form">
+          <form action="" autocomplete="off">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required="yes"
+              autofocus="yes"
+              placeholder="Name"
+            />
+            <hr>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required="yes"
+              placeholder="Email"
+            />
+            <hr>
+            <input
+              type="text"
+              id="message"
+              name="message"
+              required="yes"
+              placeholder="Message"
+            />
+            <hr>
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+      </section>
+      <img src="../images/contact-map.png" alt="A map">
+    </main>
     <footer>
       <nav>
         <a href="../index.html">
